fixed issue with paragraph overlaping in smaller screen devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,7 +174,7 @@ main {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 205px;
+    height: 155px;
 }
 
 .about-me-section p {
@@ -185,10 +185,18 @@ main {
 }
 
 @media screen and (max-width: 1155px){
+    .about-me-section {
+        height: 100%;
+    }
+
     .about-me-section p {
         width: 60%;
     }
 }
+
+
+
+
 
 @media screen and (max-width: 720px) {
     .about-me-section {
